@@ -1,0 +1,7 @@
+#                                               -*- Automake -*-
+# Process this file with automake.
+
+EXTRA_DIST = BUGS HACKING 
+bin_PROGRAMS = bini unbini
+unbini_SOURCES = unbini.c pool.c pool.h
+bini_SOURCES = parse.y scan.l convert.c convert.h pool.c pool.h
