@@ -20,6 +20,10 @@
 #ifndef CONVERT_H
 #define CONVERT_H
 
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 struct section
 {
   unsigned short str_offset;	/* string offset */
